force-app/main/default/objects/Interests__c/Interests__c.object-meta.xml
<CustomObject>
    <description>Contain information about what a client may also like</description>
    <label>Tag</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>Interests</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>