force-app/main/default/objects/Interests__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Men RTW</fullName>
            </value>
            <value>
                <fullName>Men Shoes</fullName>
            </value>
            <value>
                <fullName>Perfume</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Watches</fullName>
            </value>
            <value>
                <fullName>Women RTW</fullName>
            </value>
            <value>
                <fullName>Women Shoes</fullName>
            </value>
            <value>
                <fullName>Men Bags</fullName>
            </value>
            <value>
                <fullName>Exotics</fullName>
            </value>
            <value>
                <fullName>Capucines</fullName>
            </value>
            <value>
                <fullName>Nomades/Hardsided</fullName>
            </value>
            <value>
                <fullName>High W&amp;J</fullName>
            </value>
            <value>
                <fullName>Leather Bags</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>