force-app/main/default/objects/Interests__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>May_Also_Likes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>