force-app/main/default/objects/Interests__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <label>source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONEDATA</fullName>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>ICONiCS</fullName>
            </value>
            <value>
                <fullName>DPCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>