force-app/main/default/objects/Interests__c/fields/TECH_ExtId__c.field-meta.xml
<CustomField>
    <fullName>TECH_ExtId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Account ID + Category API Name + &quot;CA&quot;</description>
    <externalId>true</externalId>
    <label>TECH_ExtId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>